# RedRaven

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt  launch.vs.json  meson.build  vcpkg.json
src/: Application.cpp  Application.hpp  CMakeLists.txt  VecMath.h  core.h  input.h  main.cpp  meson.build  vecmath.h
src/ECSTest/: Application.cpp  Application.hpp  CMakeLists.txt  components.hpp  main.cpp  testES.cpp  testES.inl
src/common/: AccessGuard.hpp  CMakeLists.txt  CircularBuffer.hpp  Common.hpp  Config.hpp  EnumClassOperators.hpp  Exception.cpp  Exception.hpp  Logger.cpp  Logger.hpp  Math.cpp  Math.hpp  Math.inl  NativeWindowHandle.hpp  NonCopyableMovable.hpp  OnScopeExit.hpp  Singleton.hpp  Stream.hpp  String.hpp  Time.cpp  Time.hpp  Utils.hpp  VecMath.h  pch.hpp
src/common/debug/: DebugStream.cpp  DebugStream.hpp  Logger.cpp  Logger.hpp
src/common/debugging/: Logger.cpp
src/common/threading/: AccessGuard.hpp  BufferedChannel.hpp  Event.hpp  Mutex.hpp  SpinLock.hpp  Thread.hpp
src/demo/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
src/demo/filesystem/: FileStream.cpp  FileStream.hpp  FileSystem.cpp  FileSystem.hpp
src/demo/resource_manager/: ResourceManager.cpp  ResourceManager.hpp  ResourcesLoaders.cpp
src/demo/scenes/: Scene_1.hpp  Scene_2.hpp
src/demo2/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  shader.jsonnet  shader.slang
src/demo3/: Application.cpp  Application.hpp  CMakeLists.txt  shader.jsonnet  shader.slang
src/dependencies/cr/: CMakeLists.txt  cr.h
src/dependencies/eigen/: CMakeLists.txt
src/dependencies/flecs/: CMakeLists.txt  flecs.c  flecs.h  flecs_config.h
src/dependencies/glad/: glad.h
src/dependencies/nanobench/: CMakeLists.txt  nanobench.h
src/dependencies/ska/: CMakeLists.txt  flat_hash_map.h
src/dependencies/stb/: CMakeLists.txt
src/dungeon/: test.py
src/editor/: Application.cpp  Application.hpp  CMakeLists.txt  ImguiPlatformImpl.cpp  ImguiPlatformImpl.hpp  ImguiPlatformImplementation.cpp  ImguiPlatformImplementation.hpp  imgui_impl_win_rr.cpp  imgui_impl_win_rr.h  main.cpp
src/editor/imgui_impl/: ImguiPlatformImpl.cpp  ImguiRenderImpl.cpp  ImguiRenderImpl.hpp
src/filesystem/: FileStream.cpp  FileStream.hpp  FileSystem.cpp  FileSystem.hpp
src/gapi/: CMakeLists.txt  Command.hpp  CommandClear.hpp  CommandContext.hpp  CommandContextInterface.hpp  CommandList.hpp  CommandQueue.hpp  Device.hpp  DeviceInterface.hpp  Fence.hpp  ForwardDeclarations.hpp  Frame.hpp  GAPIResult.cpp  GAPIResult.hpp  GAPIStatus.cpp  GAPIStatus.hpp  GpuResource.cpp  GpuResource.hpp  GpuResourceViews.cpp  GpuResourceViews.hpp  IDevice.hpp  Limits.hpp  LinearAllocator.cpp  LinearAllocator.hpp  LinearAllocator.inl  Object.hpp  RenderContext.cpp  RenderContext.hpp  RenderContextInterface.hpp  RenderQueue.hpp  Resource.cpp  Resource.hpp  ResourceViews.cpp  ResourceViews.hpp  Result.cpp  Result.hpp  Submission.cpp  Submission.hpp  SwapChain.cpp  SwapChain.hpp  (+3 more)
src/gapi_dx12/: CMakeLists.txt  ComSharedPtr.hpp  CommandContext.cpp  CommandContext.hpp  CommandContextImpl.cpp  CommandContextImpl.hpp  CommandListCompiler.cpp  CommandListCompiler.hpp  CommandListImpl.cpp  CommandListImpl.hpp  CommandQueueImpl.cpp  CommandQueueImpl.hpp  Config.hpp  D3DUtils.cpp  D3DUtils.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  DescriptorHeapSet.cpp  DescriptorHeapSet.hpp  Device.cpp  Device.hpp  FenceImpl.cpp  FenceImpl.hpp  FencedRingBuffer.hpp  RenderCommandContext.cpp  RenderContext.cpp  RenderContext.hpp  RenderQueueImpl.cpp  RenderQueueImpl.hpp  ResourceCreator.cpp  ResourceCreator.hpp  ResourceImpl.cpp  ResourceImpl.hpp  ResourceReleaseContext.hpp  ResourceViewsImpl.cpp  ResourceViewsImpl.hpp  SwapChainImpl.cpp  SwapChainImpl.hpp  TypeConversions.cpp  TypeConversions.hpp  (+2 more)
src/inputting/: Input.cpp  Input.hpp
src/libs/: CMakeLists.txt  meson.build
src/libs/common/: CMakeLists.txt  Check.cpp  ChunkAllocator.hpp  CircularBuffer.hpp  ComPtr.hpp  Config.hpp  DataBuffer.hpp  EastlAllocator.cpp  EnumClassOperators.hpp  ErrorNo.cpp  ErrorNo.hpp  Event.hpp  EventProvider.hpp  Exception.hpp  LinearAllocator.cpp  LinearAllocator.hpp  LinearAllocator.inl  Math.cpp  Math.hpp  NonCopyableMovable.hpp  OnScopeExit.hpp  Result.cpp  Result.hpp  RingBuffer.hpp  RingQueue.hpp  Singleton.hpp  Stream.hpp  String.hpp  StringEncoding.hpp  Time.cpp  Time.hpp  VecMath.h  meson.build  pch.hpp
src/libs/ecs/: Archetype.cpp  Archetype.hpp  ArchetypeEntityIndex.hpp  CMakeLists.txt  (+34 more)
src/open_demo/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
src/render/: CMakeLists.txt  Mesh.hpp  Primitives.cpp  Primitives.hpp  RenderContext.cpp  RenderContext.hpp  RenderPasses.cpp  RenderPasses.hpp  RenderTargetContext.hpp  Rendering.cpp  Rendering.hpp  Shader.cpp  Shader.hpp  Submission.cpp  Submission.hpp  render.h  render.hpp  render_gl.h  render_gl.hpp
src/rendering/: BlendingDescription.hpp  CMakeLists.txt  Camera.hpp  DepthDescription.hpp  Material.hpp  Mesh.hpp  Primitives.cpp  Primitives.hpp  Render.cpp  Render.hpp  RenderContext.cpp  RenderContext.hpp  RenderPasses.cpp  RenderPasses.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderTarget.hpp  RenderTargetContext.hpp  SceneGraph.hpp  Shader.cpp  Shader.hpp  Texture.hpp  Transform.hpp
src/resource_manager/: ResourceManager.cpp  ResourceManager.hpp  ResourcesLoaders.cpp  ResourcesLoaders.hpp
src/rfx/: CMakeLists.txt  experement.cpp  experement.hpp  main.cpp  pch.hpp
src/scenes/: Scene_1.cpp  Scene_1.hpp  Scene_2.cpp  Scene_2.hpp
src/shaders/: colorMask.jsonnet  comparisonFunc.jsonnet  effects.jsonnet  effects.libsonnet  example_usage.jsonnet
src/tests/: Application.cpp  Application.hpp  CMakeLists.txt  TestContextFixture.cpp  TestContextFixture.hpp  main.HelloApprovals.approved.txt  main.cpp  pch.hpp
src/tools/: CMakeLists.txt  meson.build
src/windowing/: InputtingWindow.cpp  InputtingWindow.hpp  Listener.hpp  Window.cpp  Window.hpp  WindowSettings.hpp  Windowing.cpp  Windowing.hpp
(+963 files in other folders)
